changed the wiki link to infowindow

--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Neighbourhood Bookstore Map</title>
+    <title>Neighbourhood Map Project</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
    
@@ -21,7 +21,6 @@
         hr { margin: 10px 0 0 0; color: orange; border-color: blue;}
         #header{ display:block; background: lightblue; width: 100%; height: 40px; }
         #search-nav .closebtn {position: absolute;top: 0;right: 25px;font-size:36px;margin-left: 50px;}
-        #wikipedia-header{ font-size: 12px; }
       
  </style>
 <div id="header">
